stretch promo bg to full screen && fix mistake image name

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -28,7 +28,6 @@
   flex-direction: column;
   margin-bottom: 22px;
   text-align: center;
-  padding: 0 20px 0;
 
   @media (min-width: $tablet-width) {
     align-items: flex-start;
